// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Deterministic Replay Regression > replays a real game using fastlane-replay-21-weeks.json 1`] = `
{
  "campaignId": "The Fast Lane — Improved Version (QoL)",
  "economicIndex": -30,
  "economicTrend": -3,
  "pawnShopItemsForSale": [],
  "phase": "setup",
  "players": [
    {
      "activeEffects": {},
      "bankSavings": 0,
      "currentHousingId": "low_cost",
      "currentJobId": "blacks_checker",
      "currentRentPrice": 325,
      "currentWage": 7,
      "degreeDepBoost": NaN,
      "degreeExpBoost": NaN,
      "degrees": [
        "trade_school",
      ],
      "dependability": 0,
      "enrolledClasses": {},
      "experience": 29,
      "goalAllotment": {
        "career": 25,
        "education": 25,
        "happiness": 25,
        "wealth": 25,
      },
      "happiness": 10,
      "hoursRemaining": 30,
      "id": "player_1",
      "inventory": {
        "appliances": [],
        "books": [
          "atlas",
          "dictionary",
        ],
        "businessClothesWeeks": 0,
        "casualClothesWeeks": 0,
        "dressClothesWeeks": 0,
        "fastFoodItems": [],
        "freshFoodUnits": 0,
        "lotteryTickets": 0,
        "pawnedItems": [],
        "selectedClothes": "none",
        "stocks": {
          "holdings": {},
          "tBills": 0,
        },
        "tickets": {
          "baseball": 0,
          "concert": 0,
          "theatre": 0,
        },
      },
      "isAi": false,
      "loanDebt": 0,
      "loanPaymentDeadline": 0,
      "maxDependability": 40,
      "maxExperience": 20,
      "money": 0,
      "nakedTurns": 1,
      "name": "Player 1",
      "newspaperHeadline": {
        "key": "newspaper.random.4",
      },
      "position": "node_low_cost",
      "raisesAtCurrentJob": 0,
      "relaxation": 10,
      "rentDebt": 975,
      "rentExtensionActive": false,
      "rentExtensionsDeniedPermanently": true,
      "rentExtensionsReceived": 0,
      "rentPaidUntilWeek": 20,
      "timesDefaulted": 0,
      "turnEvents": [
        {
          "key": "events.starvation",
        },
        {
          "key": "events.doctorVisit_reasons",
          "params": {
            "cost": 16,
            "reasons": "Starvation",
          },
        },
        {
          "key": "events.rent.due_nodenied",
        },
      ],
      "turnFlags": {
        "askedForExtension": false,
        "caffeineDebt": 0,
        "drinkHappinessGranted": false,
        "fastFoodHappinessGranted": false,
        "freeNewspaper": false,
        "freshFoodHappinessGranted": false,
        "hasEaten": false,
        "hasSeenEvents": false,
        "hasSeenWeekend": false,
        "hasWorked": false,
        "loanDefaultWarning": false,
        "loanPayableWarning": false,
        "mentalDropsThisTurn": 0,
        "rentPaidThisTurn": false,
      },
      "weekendResult": {
        "cost": 87,
        "event": {
          "key": "events.weekend.random_35",
        },
        "happinessBonus": undefined,
      },
      "workActionsThisTurn": 0,
    },
  ],
  "rngState": 6992882883,
  "rules": {
    "allowEatingSpoiledFood": true,
    "allowEmployedRentPayment": false,
    "allowOverAchievingGoals": true,
    "allowPartialHours": true,
    "autoEquipBestClothes": true,
    "bypassDoctorIfBroke": false,
    "classicStockMarket": true,
    "clothingDecaysAll": true,
    "delayBookSetCredit": false,
    "enableAnimations": true,
    "enableRelaxationDoctor": true,
    "fluctuatingRent": false,
    "helpfulUI": true,
    "protectBuiltInAppliances": false,
    "relaxationDoctorThreshold": 10,
    "requireJobForLoan": true,
    "strictEviction": true,
  },
  "turn": 20,
  "winnerId": null,
}
`;

exports[`Deterministic Replay Regression > replays a recorded game exactly using test_replay.json 1`] = `
{
  "campaignId": "test_regression",
  "economicIndex": 0,
  "economicTrend": 0,
  "pawnShopItemsForSale": [],
  "phase": "game-over",
  "players": [
    {
      "activeEffects": {},
      "bankSavings": 50,
      "currentHousingId": "low_cost",
      "currentJobId": "burger_cook",
      "currentRentPrice": 325,
      "currentWage": 5,
      "degrees": [],
      "dependability": 12,
      "enrolledClasses": {},
      "experience": 10,
      "goalAllotment": {
        "career": 50,
        "education": 50,
        "happiness": 50,
        "wealth": 50,
      },
      "happiness": 39,
      "hasWon": true,
      "hoursRemaining": 30,
      "id": "player_1",
      "inventory": {
        "appliances": [
          {
            "id": "refrigerator",
            "purchasePrice": 400,
            "purchaseSource": "socket_city",
          },
        ],
        "books": [],
        "businessClothesWeeks": 0,
        "casualClothesWeeks": 14,
        "dressClothesWeeks": 0,
        "fastFoodItems": [],
        "freshFoodUnits": 0,
        "lotteryTickets": 0,
        "pawnedItems": [],
        "selectedClothes": "casual",
        "stocks": {
          "holdings": {},
          "tBills": 1,
        },
        "tickets": {
          "baseball": 0,
          "concert": 0,
          "theatre": 0,
        },
      },
      "isAi": false,
      "loanDebt": 0,
      "loanPaymentDeadline": 0,
      "maxDependability": 40,
      "maxExperience": 20,
      "mess": 4,
      "money": 0,
      "nakedTurns": 0,
      "name": "TestPlayer",
      "newspaperHeadline": {
        "key": "newspaper.random.3",
      },
      "position": "node_low_cost",
      "raisesAtCurrentJob": 0,
      "relaxation": 15,
      "rentDebt": 0,
      "rentExtensionActive": false,
      "rentExtensionsDeniedPermanently": false,
      "rentExtensionsReceived": 1,
      "rentPaidUntilWeek": 4,
      "timesDefaulted": 0,
      "turnEvents": [
        {
          "key": "events.starvation",
        },
        {
          "key": "events.doctorVisit",
          "params": {
            "cost": 54,
          },
        },
        {
          "key": "events.rent.extensionExpired",
        },
      ],
      "turnFlags": {
        "askedForExtension": false,
        "caffeineDebt": 0,
        "drinkHappinessGranted": false,
        "fastFoodHappinessGranted": false,
        "freeNewspaper": false,
        "freshFoodHappinessGranted": false,
        "hasEaten": false,
        "hasSeenEvents": false,
        "hasSeenWeekend": false,
        "hasWorked": false,
        "loanDefaultWarning": false,
        "loanPayableWarning": false,
        "mentalDropsThisTurn": 0,
        "rentPaidThisTurn": false,
      },
      "weekendResult": {
        "cost": 15,
        "event": {
          "key": "events.weekend.random_2",
        },
        "happinessBonus": undefined,
      },
      "workActionsThisTurn": 0,
    },
  ],
  "rngState": 42,
  "rules": {
    "allowEatingSpoiledFood": true,
    "allowEmployedRentPayment": false,
    "allowOverAchievingGoals": false,
    "allowPartialHours": true,
    "autoEquipBestClothes": true,
    "bypassDoctorIfBroke": true,
    "classicStockMarket": true,
    "clothingDecaysAll": true,
    "delayBookSetCredit": true,
    "enableAnimations": false,
    "enableRelaxationDoctor": true,
    "fluctuatingRent": false,
    "helpfulUI": false,
    "protectBuiltInAppliances": false,
    "relaxationDoctorThreshold": 10,
    "requireJobForLoan": true,
    "strictEviction": true,
  },
  "turn": 5,
  "winnerId": "player_1",
}
`;

exports[`Deterministic Replay Regression > replays bug 1785246627881 (apartment robbery without appliances) 1`] = `
{
  "campaignId": "The Fast Lane — Improved Version (QoL)",
  "economicIndex": -1,
  "economicTrend": -1,
  "pawnShopItemsForSale": [],
  "phase": "setup",
  "players": [
    {
      "activeEffects": {},
      "bankSavings": 0,
      "currentHousingId": "low_cost",
      "currentJobId": "burger_cook",
      "currentRentPrice": 325,
      "currentWage": 5,
      "degrees": [],
      "dependability": 28,
      "enrolledClasses": {},
      "experience": 10,
      "goalAllotment": {
        "career": 25,
        "education": 25,
        "happiness": 25,
        "wealth": 25,
      },
      "happiness": 10,
      "hoursRemaining": 60,
      "id": "player_1",
      "inventory": {
        "appliances": [],
        "books": [],
        "businessClothesWeeks": 0,
        "casualClothesWeeks": 6,
        "dressClothesWeeks": 0,
        "fastFoodItems": [
          {
            "happinessBonus": 0,
            "itemId": "fries",
          },
        ],
        "freshFoodUnits": 0,
        "lotteryTickets": 0,
        "pawnedItems": [],
        "selectedClothes": "casual",
        "stocks": {
          "holdings": {},
          "tBills": 0,
        },
        "tickets": {
          "baseball": 0,
          "concert": 0,
          "theatre": 0,
        },
      },
      "isAi": false,
      "loanDebt": 0,
      "loanPaymentDeadline": 0,
      "maxDependability": 40,
      "maxExperience": 20,
      "money": 421,
      "nakedTurns": 0,
      "name": "Player 1",
      "newspaperHeadline": {
        "key": "newspaper.random.2",
      },
      "position": "node_low_cost",
      "raisesAtCurrentJob": 0,
      "relaxation": 16,
      "rentDebt": 0,
      "rentExtensionActive": false,
      "rentExtensionsDeniedPermanently": false,
      "rentExtensionsReceived": 0,
      "rentPaidUntilWeek": 4,
      "timesDefaulted": 0,
      "turnEvents": [],
      "turnFlags": {
        "askedForExtension": false,
        "caffeineDebt": 0,
        "drinkHappinessGranted": false,
        "fastFoodHappinessGranted": false,
        "freeNewspaper": false,
        "freshFoodHappinessGranted": false,
        "hasEaten": false,
        "hasSeenEvents": true,
        "hasSeenWeekend": true,
        "hasWorked": false,
        "loanDefaultWarning": false,
        "loanPayableWarning": false,
        "mentalDropsThisTurn": 0,
        "rentPaidThisTurn": false,
      },
      "workActionsThisTurn": 0,
    },
  ],
  "rngState": 3962340102,
  "rules": {
    "allowEatingSpoiledFood": true,
    "allowEmployedRentPayment": false,
    "allowOverAchievingGoals": true,
    "allowPartialHours": true,
    "autoEquipBestClothes": true,
    "bypassDoctorIfBroke": false,
    "classicStockMarket": true,
    "clothingDecaysAll": true,
    "delayBookSetCredit": false,
    "enableAnimations": true,
    "enableRelaxationDoctor": true,
    "fluctuatingRent": false,
    "helpfulUI": true,
    "protectBuiltInAppliances": false,
    "relaxationDoctorThreshold": 10,
    "requireJobForLoan": true,
    "strictEviction": true,
  },
  "turn": 1,
  "winnerId": null,
}
`;
